--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,20 @@
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
-]
+requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "your-package-name"
+name = "aiorabbitmq"
 version = "0.1.0"
+authors = [{name = "Sergey", email = "gerasimovsergey2004@gmail.com"}]
+description = "async RabbitMQ"
+readme = "README.md"
+requires-python = ">=3.7"
 dependencies = [
     "aio-pika>=9.5.5"
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=6.0",
+    "mypy>=0.910"
 ]
