test(all): add unit tests - add base consumer tests - add base publisher tests - add rpc consumer tests - add rpc publisher tests - add message processor test

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,5 @@ asyncio_mode = auto
 python_files = test_*.py
 testpaths = test
 addopts = -v --color=yes
+python_functions = test_*
+norecursedirs = .* venv* dist build
