test(integration): add integration tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,7 @@ testpaths = test
 addopts = -v --color=yes
 python_functions = test_*
 norecursedirs = .* venv* dist build
+markers =
+    unit: unit tests
+    integration: integration tests
+    asyncio: asyncio tests (для pytest-asyncio)
